--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #213547;
   background-color: #242424;
 
   font-synthesis: none;
@@ -25,16 +25,14 @@
 a {
   font-weight: 500;
   color: #646cff;
-  text-decoration: inherit;
+  text-decoration: underline;
 }
 a:hover {
-  color: #535bf2;
+  color: #989dfc;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 
@@ -52,31 +50,30 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.6em;
   font-size: 1em;
   font-weight: 500;
   font-family: sans-serif;
-  background-color: #1a1a1a;
-  transition: border-color 0.25s;
+  margin: 10px 0px 20px 0px;
+  background-color: #733ac4;
+  color: white;
+  width: 200px;
 }
 button:hover {
-  border-color: #646cff;
+  background-color: rgb(98, 106, 254);
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.page-wrapper-center {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.error-message {
+  color: red;
 }
