--- a/src/pages/Auth/Auth.css
+++ b/src/pages/Auth/Auth.css
@@ -1,10 +1,13 @@
 .login-container {
   background-color: #ffe699;
-  padding: 20px 50px 40px 50px;
+  padding: 20px 100px 60px 100px;
   border-radius: 20px;
+  border-width: 2px;
+  border-color: black;
+  border-style: solid;
 }
 
-.form-container {
+.login-form-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,11 +21,4 @@
   border-radius: 5px;
   border-color: grey;
   width: 50%
-}
-
-.login-button {
-  margin: 10px 0px 20px 0px;
-  background-color: #733ac4;
-  color: white;
-  width: 50%;
 }
