--- a/src/pages/Account/Profile.css
+++ b/src/pages/Account/Profile.css
@@ -1,11 +1,11 @@
-.profile-container {
+#profile-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 5px;
 }
 
-.profile-picture {
+#profile-picture {
   width: 200px;
   height: 200px;
   border-radius: 200px;
@@ -18,7 +18,7 @@
   font-weight: 700;
 }
 
-.profile-button-container {
+#profile-button-container {
   display: flex;
   flex-direction: row;
 }
@@ -30,7 +30,7 @@
   border-width: 1px;
 }
 
-.profile-biography-text {
+#profile-biography-text {
   margin-top: 10px;
   padding: 10px;
   resize: none;
@@ -38,4 +38,44 @@
   background-color: rgba(0, 0, 0, 0.3);
   color: white;
   font-size: 16px;
+}
+#profile-biography-text::placeholder {
+  color: rgba(255, 255, 255, 0.811);
+  font-style: italic;
+}
+
+#profile-tag-container {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  
+}
+
+.profile-tag {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: lightblue;
+  padding: 2px 5px;
+  border-radius: 10px;
+  border-style: solid;
+  border-color: black;
+  border-width: 2px;
+}
+
+.profile-tag-button,
+.profile-tag-button:hover,
+.profile-tag-button:focus,
+.profile-tag-button:focus-visible {
+  all: unset;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.profile-tag-text {
+  font-weight: bold;
+  margin: 0;
 }
