--- a/src/pages/Auth/Auth.css
+++ b/src/pages/Auth/Auth.css
@@ -1,24 +1,25 @@
 .login-container {
-  background-color: #ffe699;
-  padding: 20px 100px 60px 100px;
-  border-radius: 20px;
-  border-width: 2px;
-  border-color: black;
-  border-style: solid;
+  padding: 50px 100px; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
-
-.login-form-container {
+.login-container h1 {
+  margin: 0px;
+  padding: 0px;
+}
+.login-container form {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 5px;
 }
-
-.login-input {
+.login-container input {
   font-family: sans-serif;
   font-size: medium;
   padding: 10px;
   border-radius: 5px;
   border-color: grey;
-  width: 50%
+  width: 100%
 }
