--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -5,15 +5,19 @@
 
   display: flex;
   flex-direction: row;
-  gap: 50px;
+  /* gap: 50px; */
 }
 
 .home-container-vertical-line {
   border: 2px solid #213547;
+  margin: 0px 5px;
 }
 
 .home-sidebar {
   width: 15%;
+  min-width: 15em;
+  overflow-y: auto;
+  padding-right: 45px;
 }
 .home-sidebar h2 {
   display: block;
@@ -33,6 +37,20 @@
 .home-sidebar a {
   text-decoration: none;
 }
+/* Styling the scrollbar */
+.home-sidebar::-webkit-scrollbar {
+    width: 5px;
+}
+.home-sidebar::-webkit-scrollbar-track {
+    background: transparent;
+}
+.home-sidebar::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+}
+.home-sidebar::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
 
 
 .profile-picture {
@@ -48,6 +66,7 @@
 .home-page-container {
   overflow-y: auto;
   width: 100%;
+  padding-left: 45px;
 }
 
 /* Styling the scrollbar */
