--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,11 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+input {
+  background-color: rgba(0, 0, 0, 0.2);
+  color: #242424;
+}
+
 .page-wrapper-center {
   display: flex;
   height: 100vh;
