--- a/src/pages/Auth/Auth.css
+++ b/src/pages/Auth/Auth.css
@@ -1,5 +1,5 @@
 .login-container {
-  padding: 50px 100px; 
+  padding: 50px 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,5 +21,5 @@
   padding: 10px;
   border-radius: 5px;
   border-color: grey;
-  width: 100%
+  width: 100%;
 }
