--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,11 +1,10 @@
 .home-container {
-  width: 95%;
-  height: 90vh;
-  padding: 30px 5px 30px 30px;
-
   display: flex;
   flex-direction: row;
-  /* gap: 50px; */
+  width: 95%;
+  min-width: 1000px;
+  height: 90vh;
+  padding: 30px 5px 30px 30px;
 }
 
 .home-container-vertical-line {
@@ -19,7 +18,6 @@
   overflow-y: auto;
   padding-right: 45px;
 }
-
 .home-sidebar h2 {
   display: block;
   margin: 0.5em auto;
@@ -28,36 +26,22 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
 .home-sidebar h1 {
   font-size: 2.8em;
-  color: #213547;
+  margin: 0.5em 0;
 }
-
 .home-sidebar h1:hover {
   color: #b394d6;
 }
-
 .home-sidebar a {
   text-decoration: none;
 }
 
-/* Styling the scrollbar */
-.home-sidebar::-webkit-scrollbar {
-  width: 5px;
-}
-
-.home-sidebar::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.home-sidebar::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 5px;
-}
-
-.home-sidebar::-webkit-scrollbar-thumb:hover {
-  background: #555;
+.home-page-container {
+  overflow-y: auto;
+  width: 100%;
+  padding-left: 45px;
+  min-width: 500px;
 }
 
 .profile-picture {
@@ -67,118 +51,4 @@
   height: 100px;
   border-radius: 100px;
   border: 2px solid #213547;
-}
-
-.home-page-container {
-  overflow-y: auto;
-  width: 100%;
-  padding-left: 45px;
-}
-
-/* Styling the scrollbar */
-.home-page-container::-webkit-scrollbar {
-  width: 5px;
-}
-
-.home-page-container::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.home-page-container::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 5px;
-}
-
-.home-page-container::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
-
-.profile h2 {
-  margin-bottom: 0;
-  font-size: 20px;
-  font-weight: bold;
-}
-
-#profile-button-container {
-  display: flex;
-  flex-direction: row;
-}
-
-.profile-button {
-  width: 7em;
-  border-radius: 0px;
-  border: 1px solid grey;
-  color: black;
-}
-
-#profile-biography-text {
-  margin-top: 10px;
-  padding: 10px;
-  resize: none;
-  border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0.2);
-  color: white;
-  font-size: 16px;
-  font-family: sans-serif;
-}
-#profile-biography-text::placeholder {
-  color: rgba(255, 255, 255, 0.8);
-  font-style: italic;
-}
-
-#profile-tag-container {
-  display: flex;
-  flex-direction: row;
-  gap: 5px;
-}
-
-.profile-tag-input {
-  margin-top: 10px;
-  padding: 10px;
-  resize: none;
-  border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0.2);
-  color: white;
-  font-size: 16px;
-  font-family: sans-serif;
-}
-.profile-tag-input::placeholder {
-  color: rgba(255, 255, 255, 0.8);
-  font-style: italic;
-}
-
-.profile-tag {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  background-color: lightblue;
-  padding: 2px 5px;
-  border-radius: 10px;
-  border: 2px solid black;
-}
-
-.profile-tag-button,
-.profile-tag-button:hover,
-.profile-tag-button:focus,
-.profile-tag-button:focus-visible {
-  all: unset;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-}
-
-.profile-tag-text {
-  font-weight: bold;
-  margin: 0;
-}
-
-.profile-util-button {
-  width: auto;
-  border: 1px solid grey;
-  border-radius: 5px;
-  margin: 5px;
-  padding: 5px 10px;
-  font-size: 14px;
 }
