--- a/frontend/src/components/home/home.css
+++ b/frontend/src/components/home/home.css
@@ -2,14 +2,15 @@
   display: flex;
   flex-direction: row;
   width: 95%;
-  min-width: 1000px;
+  min-width: 0;
+  box-sizing: border-box;
   height: 90vh;
   padding: 30px 5px 30px 30px;
 }
 
 .home-sidebar {
-  width: 15%;
-  min-width: 15em;
+  flex: 0 0 15em;
+  width: 15em;
   overflow-y: auto;
   padding-right: 45px;
   border-right: 5px solid #213547;
@@ -33,11 +34,12 @@
   text-decoration: none;
 }
 
-.home-page-container {
+.home-page-layout {
   overflow-y: auto;
   width: 100%;
+  flex: 1 1 auto;
+  min-width: 0;
   padding-left: 45px;
-  min-width: 500px;
 }
 
 .profile-picture {
